--- a/style.css
+++ b/style.css
@@ -111,6 +111,8 @@ button:hover {
 button {
     width: fit-content;
     overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
     padding: 10px;
     background-color: #16053d;
     color: white;
@@ -292,3 +294,4 @@ font-size: 1rem;
     margin-bottom: 10px;
 
    }
+
