--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ footer {
 button:hover {
     background-color: #53ec5b;
 }
-@media screen and (maw-width: 480px) {
+@media screen and (max-width: 480px) {
     button {
         font-size: 14px;
         padding: 8px 16px;
@@ -299,5 +299,6 @@ font-size: 1rem;
     margin-bottom: 10px;
 
    }
+
 
 
