--- a/style.css
+++ b/style.css
@@ -108,7 +108,12 @@ footer {
 button:hover {
     background-color: #53ec5b;
 
-    
+    @media screen and (max-width: 450px) {
+    button {
+        font-size: 14px;
+        padding: 8px 16px;
+    }
+}
 button {
     width: fit-content;
     overflow: hidden;
@@ -295,6 +300,7 @@ font-size: 1rem;
     margin-bottom: 10px;
 
    }
+
 
 
 
